# blink-eye

./: .gitattributes  .gitignore  BETTER_APPROACH.md  BlinkEye.desktop  BlinkEye_Fedora.spec  BuildFileForInnoSetup.iss  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.txt  CONTRIBUTING.md  LICENSE.txt  MULTI_MONITOR_FEATURE.md  README .md  README.md  REQUIREMENTS.txt  ReminderControl.README.md  ReminderHandler.README.md  SECURITY.md  alert.html  blink-eye.py  build_fedora.sh  build_windows.bat  bun.lockb  changeLatertoHide  components.json  components.json.bak  index.html  main.py  notification.py  package-lock.json  package.json  reminder-minimal.README.md  reminder-minimal.html  sf.js  support.html  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/pull_request_template/: bug_fix.md  default.md  feature.md
.github/workflows/: Auto Draft Release With Screenshot.yml  Auto Draft Release.yml  README-Auto-Draft-Release-Screenshot.md  README-Auto-Draft-Release.md  Release.yml  ReleasePublish.yml  WinGet Release.yml  build-executables.yml  build-on-command.yml  main.yml
Misc/: BlinkEye.spec  notification.py
application/: .gitignore  BlinkEye_Fedora.spec  BuildFileForInnoSetup.iss  LICENSE  README.md  REQUIREMENTS.txt  blink-eye.py  blink_eye.py  build_fedora.sh  build_windows.bat  bun.lockb  components.json  index.html  main.py  package-lock.json  package.json  tailwind.config.js  test.blink-eye.py  test.py  tsconfig.json  vite.config.ts
application/Blink Eye/: bun.lockb  index.html  package.json
application/assets/: blink-eye-logo.icns
application/blinkeye/: __init__.py  audio.py  dashboard.py  notifier.py  utils.py
application/data/: configuration.json  data.json
application/src/: App.css  App.tsx  autoStart.tsx  context.ts  main.tsx
application/src-tauri/: Cargo.toml  tauri.conf.json
application/src-tauri/capabilities/: default.json  permissions.json
application/src-tauri/icons/: icon.icns
application/src-tauri/src/: lib.rs  main.rs
blinkeye/: index.html  package.json
src/: App.css  App.tsx  PlayAudio.tsx  alert.tsx  blink-eye-onboarding.tsx  index.css  main.tsx  reminder-minimal.tsx  support.tsx
src-tauri/: Cargo.toml  LICENSE.md  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/screen_time_tracker/: README.md  STRUCTURE.md  mod.rs
src/app-api/: setupShortcuts.ts
src/assets/: AnimatedIcon.tsx
src/components/: AllSetText.tsx  AnimatedEyeBlinkLogo.tsx  AnnouncementBar.tsx  AutoStart.tsx  AutoStartToggle.tsx  BeforeAlert.tsx  BlinkEyeUpdater.tsx  ConfigDataLoader.tsx  CurrentTime.tsx  CustomTitlebar.tsx  DashboardPendingTasks.tsx  DefaultStartMinimize.tsx  EncryptionComponent.tsx  EncryptionText.tsx  ErrorDisplay.tsx  FunctionalitySwitchToggle.tsx  GradientBackground.tsx  HowToCloseScreenSaver.tsx  IdleTimeButton.tsx  LicenseValidationComponent.tsx  LoadingSpinner.tsx  MultiMonitorToggle.tsx  PlayAudio.tsx  PomodoroTimerToggle.tsx  ReminderControl.README.md  ReminderControl.tsx  ReminderHandler.README.md  ReminderHandler.tsx  ReminderStyles.tsx  ScreenOnTime.tsx  ScreenTimeTracker.tsx  SidebarNotch.tsx  StrictModeToggle.tsx  SupportDeveloperHandler.tsx  ThemeToggle.tsx  TitleBarOverlay.tsx  TodayTodoTasks.tsx  TrayIconComponent.tsx  TrialRemaining.tsx  UpdateChecker.tsx  (+5 more)
src/contexts/: PremiumFeaturesContext.tsx  TimeCountContext.tsx  TriggerReRender.tsx
src/hooks/: useAutoStart.ts  useAutoUpdater.ts  useAutoUpdater.tsx  useDecryptedDate.ts  useLicenseKey.ts  useOnlineStatus.ts  useSQLTimeCount.ts  useTimeCount.ts  useUpdater.ts
src/lib/: audioPlayer.ts  authUtils.ts  cryptoUtils.ts  migrateScreenTimeToSQLite.ts  namegenerator.ts  supportMessages.ts
src/services/: onboarding-service.ts
src/styles/: AllSetText.css  AnimatedEyeBlinkLogo.css  AnimatedIcon.css
src/types/: onboarding.ts
src/utils/: configUtils.ts
website/: .dev.vars  .env.example  .gitignore  API_ROUTES_MIGRATION.md  DEPLOYMENT_GUIDE.md  GITHUB_TOKEN_SETUP.md  LICENSE  QUICK_REFERENCE.md  README.md  README_STATIC_EXPORT.md  STATIC_EXPORT_MIGRATION.md  TAILWIND_V4_MIGRATION.md  astro.config.mjs  biome.json  bun.lockb  components.json  i18n.config.ts  middleware.ts  next.config.mjs  open-next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.mjs  wrangler.jsonc  wrangler.toml
website next/.github/: dependabot.yml
website next/app/: layout.tsx  sitemap.ts
website next/components/: open-source.tsx  pricing-section.tsx
website/.storybook/: main.ts  preview-head.html  preview.ts
website/_posts/: contribute.md  hello-world.md  (+5 more)
websiteastro/: .gitignore  LICENSE  README.md  components.json  tailwind.config.mjs
(+302 files in other folders)
