[package]
name = "Blink-Eye"
version = "1.6.0"
description = "A minimalist eye care reminder app."
authors = ["Noman Dhoni"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blink_eye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [ "tray-icon" ] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri-plugin-store = "2.1.0"
tauri-plugin-process = "2"
tauri-plugin-notification = "2.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.1"

