[package]
name = "Blink-Eye"
version = "2.7.2"
description = "A minimalist eye care reminder app for Windows, macOS, and Linux."
authors = ["Noman Dhoni"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blink_eye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [ "protocol-asset", "tray-icon", "image-png" ] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri-plugin-store = "2.1.0"
tauri-plugin-process = "2"
tauri-plugin-notification = "2.0.1"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2.0.2", features = ["sqlite"] }
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2"
idle = "0.2.0"
tauri-plugin-os = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

