[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.8"
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
