[package]
authors = ["Noman Dhoni"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-ico"] }
tauri-plugin-autostart = "2.0.0-rc.0"

# you can add the dependencies on the `[dependencies]` section if you do not target mobile
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-beta.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
